address some WS-AT compilation warnings
svn path=/trunk/; revision=6395


Former-commit-id: 5d28993d16d888d637d1817c3b1a42834aeffa82